--- a/game/package.json
+++ b/game/package.json
@@ -10,8 +10,7 @@
     "update": "akashic-cli-scan asset && akashic-cli-scan globalScripts",
     "lint": "eslint -c .eslintrc 'src/**/*.ts' --fix",
     "start": "akashic-sandbox .",
-    "export-zip": "rimraf game.zip && akashic-cli-export-zip -o game.zip -s",
-    "export-html": "rimraf game && akashic-cli-export-html -o game",
+    "export": "rimraf ./bundle && akashic-cli-export-html --magnify --bundle --minify -o ./bundle",
     "test": "jest"
   },
   "devDependencies": {
