--- a/game/package.json
+++ b/game/package.json
@@ -9,9 +9,12 @@
     "build": "rimraf ./script && tsc && akashic-cli-scan asset script",
     "update": "akashic-cli-scan asset && akashic-cli-scan globalScripts",
     "lint": "eslint -c .eslintrc 'src/**/*.ts' --fix",
+    "prestart": "npm run font && npm run update && npm run build",
     "start": "akashic-sandbox .",
+    "preexport": "npm run prestart",
     "export": "rimraf ./bundle && akashic-cli-export-html --magnify --bundle --minify -o ./bundle",
-    "test": "jest"
+    "test": "jest",
+    "font": "bmpfont-generator ./font/PixelMplus/PixelMplus12-Regular.ttf ./image/font12.png -f ./text/font.txt --json ./text/font12_glyphs.json --no-anti-alias"
   },
   "devDependencies": {
     "@akashic/akashic-cli": "^2.9.1",
@@ -20,6 +23,7 @@
     "@akashic/akashic-cli-scan": "0.10.0",
     "@akashic/akashic-engine": "~3.0.4",
     "@akashic/akashic-sandbox": "~0.17.21",
+    "@akashic/bmpfont-generator": "^4.0.5",
     "@akashic/headless-akashic": "^1.1.1",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.34",
