--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monster-rushhour-web",
+  "name": "gutchom-games",
   "private": true,
   "version": "1.0.0",
   "description": "web page of monster-rushhour",
