--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "game/caffeine-beater"]
-	path = game/caffeine-beater
+[submodule "works/caffeine-beater"]
+	path = works/caffeine-beater
 	url = git@github.com:gutchom/caffeine-beater.git
